updates element widths: cascading issues from new spacing

--- a/asset/scss/bttf.scss
+++ b/asset/scss/bttf.scss
@@ -348,7 +348,7 @@ body.vertical-menu #content #blocks {
   justify-content: space-around;
 
   .item.resource {
-    @include xy-gutters($gutter-position: bottom);    
+    @include xy-gutters($gutter-position: right bottom);    
   }
 }
 
